<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_gravity="center_horizontal|center"
	android:gravity="center_horizontal" android:layout_width="wrap_content"
	android:layout_height="wrap_content">


	<LinearLayout android:layout_width="fill_parent"
		android:background="@drawable/dialog_bg_top" android:layout_height="wrap_content"
		android:gravity="center">
		<TextView android:id="@+id/title_tv" style="@style/TextShadowStyle"
			android:paddingTop="3dip" android:textSize="24sp"
			android:layout_width="wrap_content" android:gravity="center"
			android:layout_height="wrap_content"></TextView>
	</LinearLayout>

	<LinearLayout android:layout_width="fill_parent" android:paddingBottom="15dip"
		android:orientation="vertical" android:background="@drawable/dialog_bg_bottom"
		android:layout_height="wrap_content">

		<LinearLayout android:id="@+id/mobile_linear"
			android:layout_width="fill_parent" android:paddingLeft="8dip"
			android:paddingRight="8dip" android:gravity="center_vertical"
			android:layout_height="wrap_content" android:layout_marginTop="10dp">
			<TextView android:id="@+id/mobile_tv" android:layout_height="wrap_content"
				android:layout_weight="2.9" android:singleLine="true"
				android:textSize="16sp"
				android:layout_width="fill_parent" android:text="@string/phone_number"
				android:textColor="@color/black" android:gravity="center_horizontal"></TextView>
			<EditText android:id="@+id/mobile_et" android:lines="1"
				android:layout_height="wrap_content" android:singleLine="true"
				android:layout_width="fill_parent" android:layout_weight="1"
				android:hint="@string/hint_required_text" android:inputType="phone"
				android:phoneNumber="true" android:maxLength="16"></EditText>
		</LinearLayout>
		<LinearLayout android:id="@+id/remark_linear"
			android:layout_width="fill_parent" android:paddingLeft="8dip"
			android:paddingRight="8dip" android:gravity="center_vertical"
			android:layout_height="wrap_content" android:layout_marginTop="5dp">
			<TextView android:id="@+id/remark_tv" android:layout_height="wrap_content"
				android:layout_weight="2.9" android:singleLine="true"
				android:textSize="16sp"
				android:layout_width="fill_parent" android:textColor="@color/black"
				android:text="@string/remark" android:gravity="center_horizontal"></TextView>
			<EditText android:id="@+id/remark_et" android:lines="1"
				android:layout_height="wrap_content" android:singleLine="true"
				android:layout_width="fill_parent" android:layout_weight="1"
				android:hint="@string/hint_optional_text"></EditText>
		</LinearLayout>

		<LinearLayout android:layout_width="fill_parent"
			android:layout_marginTop="18dip" android:layout_height="wrap_content"
			android:gravity="center_horizontal">
			<TextView android:id="@+id/sure_tv" android:layout_width="wrap_content"
				android:gravity="center" android:background="@drawable/button_bg_main_selector"
				style="@style/TextShadowStyle" android:textSize="22sp"
				android:layout_height="wrap_content" />

			<TextView android:id="@+id/cancel_tv" android:layout_width="wrap_content"
				android:gravity="center" android:background="@drawable/button_bg_main_selector"
				style="@style/TextShadowStyle" android:textSize="22sp"
				android:layout_height="wrap_content" />
		</LinearLayout>



	</LinearLayout>
</LinearLayout>

